--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -20,24 +20,31 @@
       </ion-refresher>
     <div class="container">
         <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
-      
-          <label for="fname">First Name</label>
-          <input type="text" formControlName="firstname" placeholder="Your name..">
-      
-          <label for="lname">Last Name</label>
-          <input type="text" formControlName="lastname" placeholder="Your last name..">
-      
+          <div class="form-group">
+            <label for="fname">First Name</label>
+            <input class="form-control" type="text" formControlName="firstname" placeholder="Your name..">
+          </div>
+
+          <div class="form-group">
+            <label for="lname">Last Name</label>
+            <input class="form-control" type="text" formControlName="lastname" placeholder="Your last name..">
+          </div>
+
+
           <label for="country">Country</label>
-          <select formControlName="country">
+          <select class="custom-select custom-select-lg mb-3" formControlName="country">
             <option value="India">India</option>
             <option value="canada">Canada</option>
             <option value="usa">USA</option>
           </select>
-      
-          <label for="message">Message</label>
-          <textarea formControlName="message" placeholder="Write something.." style="height:200px"></textarea>
-      
-          <ion-button [disabled]="!myForm.valid" type="submit" >Submit</ion-button>
+
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea class="form-control" formControlName="message" placeholder="Write something.." style="height:200px"></textarea>
+          </div>
+
+
+          <button type="submit" [disabled]="!myForm.valid" class="btn btn-primary">Submit</button>
       
         </form>
       </div>
