--- a/src/app/workoutlog/workoutlog.page.scss
+++ b/src/app/workoutlog/workoutlog.page.scss
@@ -1,8 +1,6 @@
-
-  
-  .hide {
-    display: none;
-  }
+ion-content {
+  --background: url('../../assets/images/edgar.jpg') 0 0/100% 100% no-repeat; 
+}
 
   [type=radio] { 
     position: absolute;
@@ -18,5 +16,5 @@
   
   /* CHECKED STYLES */
   [type=radio]:checked + img {
-    outline: 2px solid #f00;
+    outline: 2px solid #F4741B;
   }
