--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>
+      <ion-title style="color: white">
         Contact US
       </ion-title>
     </ion-toolbar>
@@ -18,33 +18,33 @@
           refreshingText="Refreshing...">
         </ion-refresher-content>
       </ion-refresher>
-    <div class="container">
+    <div class="container-fluid">
         <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
           <div class="form-group">
-            <label for="fname">First Name</label>
-            <input class="form-control" type="text" formControlName="firstname" placeholder="Your name..">
+            <label for="fname" style="color: white">First Name</label>
+            <input class="form-control" style="background: rgba(0, 0, 0 , 0.3); color: white" type="text" formControlName="firstname" placeholder="Your name..">
           </div>
 
           <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input class="form-control" type="text" formControlName="lastname" placeholder="Your last name..">
+            <label for="lname" style="color: white">Last Name</label>
+            <input class="form-control" style="background: rgba(0, 0, 0 , 0.3); color: white" type="text" formControlName="lastname" placeholder="Your last name..">
           </div>
 
 
-          <label for="country">Country</label>
-          <select class="custom-select custom-select-lg mb-3" formControlName="country">
+          <label for="country" style="color: white">Country</label>
+          <select class="custom-select custom-select-lg mb-3" style="background: rgba(0, 0, 0 , 0.3); color: white" formControlName="country">
             <option value="India">India</option>
             <option value="canada">Canada</option>
             <option value="usa">USA</option>
           </select>
 
           <div class="form-group">
-            <label for="message">Message</label>
-            <textarea class="form-control" formControlName="message" placeholder="Write something.." style="height:200px"></textarea>
+            <label for="message" style="color: white">Message</label>
+            <textarea class="form-control" formControlName="message" placeholder="Write something.." style="height:200px; background: rgba(0, 0, 0 , 0.3); color: white"></textarea>
           </div>
 
 
-          <button type="submit" [disabled]="!myForm.valid" class="btn btn-primary">Submit</button>
+          <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B; color: white" class="btn btn-block btn-lg">Submit</button>
       
         </form>
       </div>
