form ui changes

--- a/src/app/disclaimer/disclaimer.page.html
+++ b/src/app/disclaimer/disclaimer.page.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <button type="submit" [disabled]="!myForm.valid" class="btn btn-primary">Submit</button>
+    <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B; color: white" class="btn btn-block">Submit</button>
 
   </form>
 
