--- a/src/app/goals/goals.page.scss
+++ b/src/app/goals/goals.page.scss
@@ -1,4 +1,16 @@
 
 .error-message {
-    color: red;
+    color: black;
 }
+
+
+ion-content {
+    --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
+  }
+  label {
+    color: white;
+  }
+  // input {
+  // background: rgba(0, 0, 0, 0.3);
+  // color: white;
+  // }
