--- a/src/app/medicalhistory/medicalhistory.page.scss
+++ b/src/app/medicalhistory/medicalhistory.page.scss
@@ -1,3 +1,13 @@
-// .error-message {
-//     color: red;
-// }
+.error-message {
+    color: black;
+}
+ion-content {
+    --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
+  }
+  label {
+    color: white;
+  }
+  // input {
+  // background: rgba(0, 0, 0, 0.3);
+  // color: white;
+  // }
