--- a/src/app/foodlog/foodlog.page.scss
+++ b/src/app/foodlog/foodlog.page.scss
@@ -1,5 +1,5 @@
 
-  ion-content {
-    --background: url('../../assets/images/bottle-bowl-cuisine.jpg') 0 0/150% 100% no-repeat ;
-  }
+  // ion-content {
+  //   --background: url('../../assets/images/bottle-bowl-cuisine.jpg') 0 0/150% 100% no-repeat ;
+  // }
 
