--- a/src/app/goals/goals.page.html
+++ b/src/app/goals/goals.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar >
-    <ion-title>Current Activity/ Goals</ion-title>
+    <ion-title style="color: white">Current Activity/ Goals</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -68,7 +68,7 @@
         </div>  
       </div>
 
-      <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B; color:white ;" class="btn btn-block">Submit</button>
+      <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color:white ;" class="btn btn-block">Submit</button>
     </form>
 
   </div>
