--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -21,30 +21,30 @@
     <div class="container-fluid">
         <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
           <div class="form-group">
-            <label for="fname" style="color: white">First Name</label>
-            <input class="form-control" style="background: rgba(0, 0, 0 , 0.3); color: white" type="text" formControlName="firstname" placeholder="Your name..">
+            <label for="fname" >First Name</label>
+            <input class="form-control" type="text" formControlName="firstname" placeholder="Your name..">
           </div>
 
           <div class="form-group">
-            <label for="lname" style="color: white">Last Name</label>
-            <input class="form-control" style="background: rgba(0, 0, 0 , 0.3); color: white" type="text" formControlName="lastname" placeholder="Your last name..">
+            <label for="lname">Last Name</label>
+            <input class="form-control" type="text" formControlName="lastname" placeholder="Your last name..">
           </div>
 
 
-          <label for="country" style="color: white">Country</label>
-          <select class="custom-select custom-select-lg mb-3" style="background: rgba(0, 0, 0 , 0.3); color: white" formControlName="country">
+          <label for="country">Country</label>
+          <select class="custom-select custom-select-lg mb-3"  formControlName="country">
             <option value="India">India</option>
             <option value="canada">Canada</option>
             <option value="usa">USA</option>
           </select>
 
           <div class="form-group">
-            <label for="message" style="color: white">Message</label>
-            <textarea class="form-control" formControlName="message" placeholder="Write something.." style="height:200px; background: rgba(0, 0, 0 , 0.3); color: white"></textarea>
+            <label for="message">Message</label>
+            <textarea class="form-control" formControlName="message" placeholder="Write something.."></textarea>
           </div>
 
 
-          <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B; color: white" class="btn btn-block btn-lg">Submit</button>
+          <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color: white" class="btn btn-block btn-lg">Submit</button>
       
         </form>
       </div>
