--- a/src/app/contactus/contactus.page.scss
+++ b/src/app/contactus/contactus.page.scss
@@ -1,3 +1,3 @@
-ion-content {
-  --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
-}
+// ion-content {
+//   --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
+// }
