--- a/src/app/disclaimer/disclaimer.page.html
+++ b/src/app/disclaimer/disclaimer.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar >
-    <ion-title>Disclaimer/ Liability Waiver </ion-title>
+    <ion-title style="color: white">Disclaimer/ Liability Waiver </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B; color: white" class="btn btn-block">Submit</button>
+    <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color: white" class="btn btn-block">Submit</button>
 
   </form>
 
