--- a/src/app/disclaimer/disclaimer.page.scss
+++ b/src/app/disclaimer/disclaimer.page.scss
@@ -1,9 +1,9 @@
-ion-content {
-    --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
-  }
-  label {
-    color: white;
-  }
+// ion-content {
+//     --background: url('../../assets/images/7_4_2500.jpg') 0 0/150% 100% no-repeat; 
+//   }
+//   label {
+//     color: white;
+//   }
   // input {
   // background: rgba(0, 0, 0, 0.3);
   // color: white;
