--- a/src/app/signupform/signupform.page.html
+++ b/src/app/signupform/signupform.page.html
@@ -105,7 +105,7 @@
               </div>
           </div>
               
-          <button type="submit" [disabled]="!myForm.valid" style="background: #F4741B" class="btn btn-block">Submit</button>
+          <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color: white" class="btn btn-block">Submit</button>
       </form>
   
   </div>
