--- a/src/app/workoutlog/workoutlog.page.scss
+++ b/src/app/workoutlog/workoutlog.page.scss
@@ -1,6 +1,6 @@
-ion-content {
-  --background: url('../../assets/images/edgar.jpg') 0 0/100% 100% no-repeat; 
-}
+// ion-content {
+//   --background: url('../../assets/images/edgar.jpg') 0 0/100% 100% no-repeat; 
+// }
 
   [type=radio] { 
     position: absolute;
@@ -16,5 +16,5 @@ ion-content {
   
   /* CHECKED STYLES */
   [type=radio]:checked + img {
-    outline: 2px solid #F4741B;
+    outline: 2px solid #3171e0;
   }
