new logo and color code

--- a/src/app/foodlog/foodlog.page.html
+++ b/src/app/foodlog/foodlog.page.html
@@ -39,7 +39,7 @@
     <textarea class="form-control" type="text" formControlName="details" style="height:200px;"required ></textarea>
   </div>
 <div align="center">
-  <button type="submit" [disabled]="!myForm.valid" style="color: white; background: #3171e0;" class="btn btn-block btn-lg">Save</button>
+  <button type="submit" [disabled]="!myForm.valid" style="color: white; background: #4C99AB;" class="btn btn-block btn-lg">Save</button>
 </div>
   </form>
 
