--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,7 +79,8 @@
 
 ion-toolbar{
   // --background: #F4741B;
-  --background: #3171e0;
+  --background: #26617D;
+  // --background: #4C99AB;
 }
 
  
