--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -44,7 +44,7 @@
           </div>
 
 
-          <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color: white" class="btn btn-block btn-lg">Submit</button>
+          <button type="submit" [disabled]="!myForm.valid" style="background: #4C99AB; color: white" class="btn btn-block btn-lg">Submit</button>
       
         </form>
       </div>
