--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -15,12 +15,12 @@
 	margin: auto;
 }
 
-.center > svg {
+.center > img {
   width: 75%;
   margin-left: 12.5%;
 }
 
-.center > svg .cls-4 {
+.center > img .cls-4 {
   fill: #ccc;
 }
 
