--- a/src/app/medicalhistory/medicalhistory.page.html
+++ b/src/app/medicalhistory/medicalhistory.page.html
@@ -102,7 +102,7 @@
 
       </div>
     
-      <button type="submit" [disabled]="!myForm.valid" style="background: #3171e0; color: white" class="btn btn-block">Submit</button>
+      <button type="submit" [disabled]="!myForm.valid" style="background: #4C99AB; color: white" class="btn btn-block">Submit</button>
     </form>
     
   </div>
