--- a/src/app/workout/workout.page.scss
+++ b/src/app/workout/workout.page.scss
@@ -6,7 +6,7 @@ button{
   position: relative;
   left: 31%;
   transform: translateX(-31%); 
-  background-color: #3171e0;
+  background-color: #4C99AB;
 }
 
 // ion-content {
@@ -14,6 +14,6 @@ button{
 // }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-  background-color: #3171e0;
+  background-color: #4C99AB;
 }
 
