--- a/src/app/workoutlog/workoutlog.page.html
+++ b/src/app/workoutlog/workoutlog.page.html
@@ -55,7 +55,7 @@
     </div>
 
   <div align="center" style="padding-top: 5%">
-    <button type="submit" [disabled]="!myForm.valid"  style="color: white; background: #3171e0; border-radius: 00%" class="btn btn-lg btn-block">Save</button>
+    <button type="submit" [disabled]="!myForm.valid"  style="color: white; background: #4C99AB; border-radius: 00%" class="btn btn-lg btn-block">Save</button>
   </div>
   </form>
   </div>
