page redirect if no data

--- a/src/app/foodlog/foodlog.page.html
+++ b/src/app/foodlog/foodlog.page.html
@@ -21,7 +21,7 @@
   <form (ngSubmit)="onSave(myForm.value)" [formGroup]="myForm">
 
   <div class="form-group">
-    <ion-label>Date</ion-label>
+    <label>Date</label>
     <input type="date" formControlName="date" class="form-control" >
   </div>
 
@@ -35,7 +35,7 @@
   </div>
 
   <div class="form-group">
-    <ion-label floating >Meal Details</ion-label>
+    <label floating >Meal Details</label>
     <textarea class="form-control" type="text" formControlName="details" style="height:200px;"required ></textarea>
   </div>
 <div align="center">
