--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -61,7 +61,7 @@
 
   <div class="container-fluid hide" id="rest">
     <ion-card>
-      <ion-card-content style=" text-align: center; font-family: sans-serif; font-weight: bolder; height:20rem; justify-content: center; display: flex; align-content: center; align-items: center">
+      <ion-card-content style=" text-align: center; font-family: sans-serif; font-weight: bolder; height:20rem; display: flex; align-content: center; align-items: center">
         Ola!!! No workout schedule today.....
         Enjoy the rest period
       </ion-card-content>
@@ -70,7 +70,7 @@
 
   <div class="container-fluid hide" id="select">
     <ion-card>
-      <ion-card-content style="text-align: center; font-family: sans-serif; font-weight: bolder; height:20rem; justify-content: center; display: flex; align-content: center; align-items: center">
+      <ion-card-content style="text-align: center; font-family: sans-serif; font-weight: bolder; height:20rem; display: flex; align-content: center; align-items: center">
         Please select the type of workout 
         which you want to do today.....
       </ion-card-content>
